[package]
name = "cue-rs"
version = "0.1.0"
edition = "2024"
description = "Shell-Cell. CLI app to spawn and manage containerized shell environments"
repository = "https://github.com/Mr-Leshiy/shell-cell"
authors = [
    "Alex Pozhylenkov (Mr-Leshiy) <leshiy12345678@gmail.com>"
]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
serde_yml = "0.0.12"
