[package]
name = "cue-rs"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the [CUE](https://cuelang.org), using [libcue](https://github.com/cue-lang/libcue)."
repository = "https://github.com/Mr-Leshiy/cue-rs"
authors = [
    "Oleksii Pozhylenkov (Mr-Leshiy) <leshiy12345678@gmail.com>"
]
license = "MIT OR Apache-2.0"
[package.metadata.docs.rs]
# docs.rs has no Go toolchain; build.rs skips compilation when DOCS_RS is set.
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(track_caller)'] }
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_time_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"
arithmetic_side_effects = "deny"

[dependencies]
bytes = "1"
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
serde_yml = "0.0.12"
test-case = "3.3.1"
